# 2022-lectures

./: .gitignore  README.md
API/: README.md
API/django_app/: pyproject.toml
API/fastapi-boilerplate/: pyproject.toml
API/fastapi_app/: .env.local-example  .gitignore  config.py  docker-compose.yml  main.py  pyproject.toml
API/fastapi_app/api/v1/: deps.py
API/fastapi_app/models/: factory.py  user.py
API/fastapi_app/src/: main.py  pyproject.toml
API/fastapi_app/src/api/: deps.py
API/fastapi_app/src/api/v1/: auth.py  note.py  user.py
API/fastapi_app/src/core/: config.py
API/fastapi_app/src/db/: postgres.py
API/fastapi_app/src/migrations/: env.py
API/fastapi_app/src/migrations/versions/: 3b52f97b74e1_notes.py  8bb815fcdacd_sessiontoken.py  91dd49a74ead_init.py  9c6c92e3bbc0_sessiontoken.py  e0325effd6ee_sessiontoken.py
API/fastapi_app/src/models/: __init__.py  base.py  note.py  user.py
API/fastapi_app/src/serializers/: __init__.py  note.py  user.py
API/fastapi_app/src/services/: auth.py
