[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["Rashid Mingazov <rashid.mingazov@mircod.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
alembic = "^1.8.0"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
pydantic = "^1.9.1"
psycopg2-binary = "^2.9.3"
python-multipart = "^0.0.5"
requests = "^2.28.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
