[tool.poetry]
name = "fastapi_app"
version = "0.1.0"
description = ""
authors = ["Rashid Mingazov <rashid.mingazov@mircod.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
