[tool.poetry]
name = "fastapi_app"
version = "0.1.0"
description = ""
authors = ["Rashid Mingazv <rashid.mingazov@mircod.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.71.0"
loguru = "^0.5.3"
uvicorn = "^0.16.0"
aiohttp = "^3.8.1"
python-multipart = "^0.0.5"
alembic = {extras = ["tz"], version = "^1.7.5"}
asyncpg = "^0.25.0"
orjson = "^3.7.6"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "19.10b0"
flake8 = "^4.0.1"
isort = "5.6.4"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
